--- a/README
+++ b/README
@@ -26,8 +26,20 @@ Add a value '-l UISuggestingPeoplePicker' to item 'Other Linker Flags' under sec
 Add a value '/Users/foobar/Downloads/UISuggestingPeoplePicker/Headers' to item 'Header Search Paths' under section 'Search Paths'.
 ('/Users/foobar/Downloads/UISuggestingPeoplePicker' is the path where you put project folder of UISuggestingPeoplePicker into.)
 
-1.3 Test if everything is ready.
-Choose a scheme for UISuggestingPeoplePicker and click 'Run'. If built successfully, the red named file 'libUISuggestingPeoplePicker.a' would become black.
+1.3 Add required framework into your project.
+UISuggestingPeoplePicker needs 6 frameworks to work:
+
+UIKit.framework
+Foundation.framework
+CoreGraphics.framework
+QuartzCore.framework
+AddressBook.framework
+AddressBookUI.framework
+
+You should import them by clicking your project name in the project navigator and choosing 'Build Phases' > 'Link Binary With Libraries'.
+
+1.4 Test if everything is ready.
+Choose a scheme named 'UISuggestingPeoplePicker | IOS Device (or Simulator)' and click 'Run'. If built successfully, the red-named file 'libUISuggestingPeoplePicker.a' would become black.
 
 2 Usage
 
